--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                     <h2>📄 Download My CV</h2>
                     <p>Get the complete overview of my experience, skills, and achievements</p>
                     <div class="cv-buttons">
-                        <a href="Files/Mishawrnilanthi Selvaraj_Resume.pdf" class="btn btn-white" download>
+                        <a href="Files/Mishawnilanthi Selvaraj_Resume.pdf" class="btn btn-white" download>
                             ⬇️ Download CV (PDF)
                         </a>
                         <a href="#projects" class="btn btn-outline">
